adding interceptor for demo

--- a/src/modules/auth/containers/login/login.component.html
+++ b/src/modules/auth/containers/login/login.component.html
@@ -8,6 +8,7 @@
                     <div class="invalid-feedback" *ngIf='passwordControl.hasError("required")'>Password required.</div>
                     <div class="invalid-feedback" *ngIf='passwordControl.hasError("minlength")'>Password must be at least 8 characters.</div>
                 </form>
+                <h6 class="text-white-50">Default: 123123123</h6>
             </div>
         </div>
     </div></sb-layout-auth
