--- a/src/modules/auth/containers/login/login.component.pug
+++ b/src/modules/auth/containers/login/login.component.pug
@@ -25,3 +25,4 @@ sb-layout-auth
                         | Password required.
                     .invalid-feedback(*ngIf='passwordControl.hasError("minlength")')
                         | Password must be at least 8 characters.
+                h6.text-white-50 Default: 123123123
