--- a/src/modules/blog/containers/home/home.component.html
+++ b/src/modules/blog/containers/home/home.component.html
@@ -1,5 +1,5 @@
 <sb-layout-blog
-    ><sb-clean-blog-header backgroundImage='url("assets/img/home-bg.jpg")' heading="Clean Blog" subHeading="Blog Theme by Start Bootstrap" [siteHeading]="true"></sb-clean-blog-header
+    ><sb-clean-blog-header backgroundImage='url("assets/img/home-bg.jpg")' heading="Clean Blog" subHeading="Blog Theme by Start Bootstrap" [siteHeading]="true"></sb-clean-blog-header><sb-demo-info *ngIf="!isLoggedIn"></sb-demo-info
     ><ng-container *ngIf="posts$ | async as posts"
         ><div class="container">
             <div class="row">
