--- a/src/modules/blog/containers/home/home.component.pug
+++ b/src/modules/blog/containers/home/home.component.pug
@@ -1,10 +1,14 @@
 sb-layout-blog
+    
     sb-clean-blog-header(
         backgroundImage='url("assets/img/home-bg.jpg")',
         heading='Clean Blog',
         subHeading='Blog Theme by Start Bootstrap',
         [siteHeading]='true'
     )
+
+    sb-demo-info(*ngIf='!isLoggedIn')
+
     ng-container(
         *ngIf='posts$ | async as posts'
     )
