connected social links

--- a/src/modules/navigation/containers/footer/footer.component.html
+++ b/src/modules/navigation/containers/footer/footer.component.html
@@ -4,7 +4,7 @@
             <div class="col-lg-8 col-md-10 mx-auto">
                 <ul class="list-inline text-center">
                     <li class="list-inline-item">
-                        <a [routerLink]=""
+                        <a href="https://twitter.com/sbootstrap" target="_blank"
                             ><fa-stack size="lg"><fa-icon class="fa-stack-2x" [icon]='["fas", "circle"]' stackItemSize="2x"></fa-icon><fa-icon class="fa-stack-1x fa-inverse" [icon]='["fab", "twitter"]' stackItemSize="1x"></fa-icon></fa-stack
                         ></a>
                     </li>
@@ -14,7 +14,7 @@
                         ></a>
                     </li>
                     <li class="list-inline-item">
-                        <a [routerLink]=""
+                        <a href="https://github.com/StartBootstrap/sb-clean-blog-angular" target="_blank"
                             ><fa-stack size="lg"><fa-icon class="fa-stack-2x" [icon]='["fas", "circle"]' stackItemSize="2x"></fa-icon><fa-icon class="fa-stack-1x fa-inverse" [icon]='["fab", "github"]' stackItemSize="1x"></fa-icon></fa-stack
                         ></a>
                     </li>
