--- a/src/modules/navigation/containers/footer/footer.component.pug
+++ b/src/modules/navigation/containers/footer/footer.component.pug
@@ -4,7 +4,7 @@ footer
             .col-lg-8.col-md-10.mx-auto
                 ul.list-inline.text-center
                     li.list-inline-item
-                        a([routerLink]='')
+                        a(href='https://twitter.com/sbootstrap', target='_blank')
                             fa-stack(size="lg")
                                 fa-icon.fa-stack-2x([icon]='["fas", "circle"]', stackItemSize="2x")
                                 fa-icon.fa-stack-1x.fa-inverse([icon]='["fab", "twitter"]', stackItemSize="1x")
@@ -14,7 +14,7 @@ footer
                                 fa-icon.fa-stack-2x([icon]='["fas", "circle"]', stackItemSize="2x")
                                 fa-icon.fa-stack-1x.fa-inverse([icon]='["fab", "facebook-f"]', stackItemSize="1x")
                     li.list-inline-item
-                        a([routerLink]='')
+                        a(href='https://github.com/StartBootstrap/sb-clean-blog-angular', target='_blank')
                             fa-stack(size="lg")
                                 fa-icon.fa-stack-2x([icon]='["fas", "circle"]', stackItemSize="2x")
                                 fa-icon.fa-stack-1x.fa-inverse([icon]='["fab", "github"]', stackItemSize="1x")
