1 article for test

--- a/src/modules/blog/components/clean-blog-header/clean-blog-header.component.html
+++ b/src/modules/blog/components/clean-blog-header/clean-blog-header.component.html
@@ -1,4 +1,6 @@
-<header class="masthead" [style.background-image]="safeBackgroudImage">
+<header class="masthead" [style]="safeBackgroudImage">
+<!--<header class="masthead" [style.background-image]="'url(' + safeBackgroudImage + ')'">-->
+<!--<header class="masthead" [style.background-image]="safeBackgroudImage">-->
     <div class="overlay"></div>
     <div class="container">
         <div class="row">
