--- a/src/modules/blog/containers/about/about.component.html
+++ b/src/modules/blog/containers/about/about.component.html
@@ -1,1 +1,5 @@
-<sb-layout-blog><sb-clean-blog-header backgroundImage='url("assets/img/about-bg.jpg")' heading="About Me" subHeading="This is what I do" [siteHeading]="true"></sb-clean-blog-header></sb-layout-blog>
+<sb-layout-blog>
+    <sb-clean-blog-header backgroundImage='url("assets/img/about-bg.jpg")' heading="About Me"
+                          subHeading="This is what I do" [siteHeading]="true">
+    </sb-clean-blog-header>
+</sb-layout-blog>
